--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ margin-left:12pc;
 		<td class="black">40</td>
 	</tr>
 </table>
-<a class="Pre" href="">Previous</a>
+<a class="Pre" href="https://hmuneer.github.io/table-3/">Previous</a>
 
 
-<a class="next" href="">Next</a>
+<a class="next" href="https://hmuneer.github.io/Table-5/">Next</a>
 </body>
 </html>
